--- a/TreasureHunt/app/src/main/AndroidManifest.xml
+++ b/TreasureHunt/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         android {
         buildTypes {
         debug {
@@ -35,16 +34,17 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".GamePlayActivity"
+            android:configChanges="orientation"
             android:label="@string/title_activity_maps"
-            android:configChanges = "orientation"
-            android:screenOrientation = "portrait">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MapsActivity"></activity>
     </application>
 
 </manifest>
