--- a/Gadabout/app/src/main/AndroidManifest.xml
+++ b/Gadabout/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlayMap" />
+        <activity android:name=".PlayMap">
+        </activity>
         <activity android:name=".GamePlay" />
         <activity android:name=".DoneGame" />
         <activity android:name=".BrowseMaps" />
